# emoji-counter

./: .gitignore  404.html  README.md  explore.py  index.html  index.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  zensical.toml
.github/skills/: copilot-instructions.md
.github/skills/zensical-setup/: SKILL.md
.github/workflows/: docs.yml  tests.yml
autoapi/emoji_counter/: index.html
autoapi/emoji_counter/emoji_extract/: index.html
autoapi/emoji_counter/explore/: index.html
autoapi/emoji_counter/message_convert/: index.html
autoapi/summary/: index.html
dashboard/: index.html
database-schema/: index.html
docs/: dashboard.md  database-schema.md  emoji-extraction.md  getting-started.md  index.md  message-conversion.md  web-upload.md
emoji-extraction/: index.html
getting-started/: index.html
message-conversion/: index.html
src/emoji_counter/: emoji_extract.py  explore.py  message_convert.py  upload_processor.py
src/emoji_counter/assets/: figure-save-hotkey.js
tests/: FirstName1 LastName1 (abc-123-xyz-987).txt  test_emoji_extract.py  test_message_convert.py  test_upload_processor.py
